# netbox-bmc

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  LICENSE  Makefile  NOTICE  README.md  README_ja.md  pyproject.toml
.github/workflows/: ci.yaml  publish-pypi.yaml
netbox_bmc/: __init__.py  credentials.py  forms.py  inventory.py  jobs.py  models.py  module_sync.py  navigation.py  normalizer.py  tables.py  template_content.py  urls.py  views.py
netbox_bmc/api/: serializers.py  urls.py  views.py
netbox_bmc/drivers/: __init__.py  amt.py  base.py  ipmi.py  redfish.py
netbox_bmc/migrations/: 0001_initial.py  0002_add_jobs_feature.py  0003_inventoryitem_redfish_path_cf.py  0004_module_custom_fields.py  0005_device_firmware_cf.py  0006_bmcendpoint_detected_serial.py  0007_bmcendpoint_ip_address_fk.py
netbox_bmc/templates/netbox_bmc/: bmcendpoint.html  bmcendpoint_list.html  module_preview.html
netbox_bmc/templates/netbox_bmc/inc/: device_bmc_panel.html
tests/: conftest.py  test_amt_driver.py  test_ipmi_driver.py  test_module_sync_apply.py  test_module_sync_diff.py  test_normalizer.py  test_redfish_extensions.py
