[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-bmc"
version = "0.4.4"
authors = [{name = "tak-labo"}]
description = "Unified out-of-band management for NetBox: Redfish & IPMI inventory sync, power control, console access"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["netbox", "netbox-plugin"]
requires-python = ">=3.12.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.31",
    "pyghmi>=1.5",
]

[project.urls]
Documentation = "https://github.com/tak-labo/netbox-bmc/blob/main/README.md"
Source = "https://github.com/tak-labo/netbox-bmc"
Tracker = "https://github.com/tak-labo/netbox-bmc/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["netbox_bmc*"]

[tool.setuptools.package-data]
netbox_bmc = [
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
